--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "A sample React/Redux, Node.js, MongoDB application",
   "main": "index.js",
   "scripts": {
+    "build:dev": "webpack -p --env development",
+    "build:prod": "webpack -p --env production",
     "babel:node": "babel-node --presets=env",
-    "start:dev": "nodemon --exec npm run babel:node -- ./index.js",
+    "test": "jest --config=config/jest.config.json",
     "test:unit": "NODE_ENV=test mocha --watch --opts config/mocha-unit.opts **/*.unit.js",
-    "test": "jest --config=config/jest.config.json"
+    "start": "node ./index.js",
+    "start:dev": "nodemon --exec npm run babel:node -- ./index.js --inspect backend/",
+    "heroku-postbuild": "npm run build:prod"
   },
   "repository": {
     "type": "git",
@@ -23,17 +27,35 @@
     "ajv": "^6.5.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
     "escape-string-regexp": "^1.0.5",
     "express": "^4.16.3",
     "http-status": "^1.2.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.4",
     "mongoose-unique-validator": "^2.0.1",
+    "node-sass": "^4.9.2",
+    "normalize.css": "^8.0.0",
+    "numeral": "^2.0.6",
+    "raf": "^3.4.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-router-prop-types": "^1.0.4",
+    "redux": "^4.0.0",
+    "sass-loader": "^7.0.3",
+    "semantic-ui-css": "^2.3.3",
+    "semantic-ui-react": "^0.82.0",
     "sha256": "^0.2.0",
+    "style-loader": "^0.21.0",
+    "uuid": "^3.3.2",
     "validator": "^10.4.0"
   },
   "devDependencies": {
@@ -46,13 +68,14 @@
     "eslint-plugin-babel": "^5.1.0",
     "eslint-plugin-jest": "^21.18.0",
     "eslint-plugin-react": "^7.10.0",
-    "extract-text-webpack-plugin": "^3.0.2",
     "jest": "^23.4.1",
     "jest-mongoose-mock": "^1.1.3",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.3",
     "react-test-renderer": "^16.4.1",
     "webpack": "^4.16.1",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-livereload-plugin": "^1.2.0"
   }
 }
