--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-prop-types": "^1.0.4",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.0.3",
     "semantic-ui-css": "^2.3.3",
     "semantic-ui-react": "^0.82.0",
