--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "node-sass": "^4.9.2",
     "normalize.css": "^8.0.0",
     "numeral": "^2.0.6",
+    "query-string": "^6.1.0",
     "raf": "^3.4.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
