--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "node-sass": "^4.9.3",
     "normalize.css": "^8.0.0",
     "numeral": "^2.0.6",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "query-string": "^6.2.0",
     "raf": "^3.4.0",
     "react": "^16.5.2",
