--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "escape-string-regexp": "^1.0.5",
     "express": "^4.16.4",
     "http-status": "^1.2.0",
+    "jsonwebtoken": "^8.3.0",
     "moment": "^2.22.2",
     "mongoose": "^5.3.8",
     "mongoose-unique-validator": "^2.0.2",
